force-app/main/default/objects/RTR_Vehicle_Master__c/RTR_Vehicle_Master__c.object-meta.xml
<CustomObject>
    <label>Vehicle Master</label>
    <nameField>
        <label>Vehicle  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vehicle Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>