force-app/main/default/objects/RTR_Vehicle_Master__c/fields/RTR_Chasis_Number__c.field-meta.xml
<CustomField>
    <fullName>RTR_Chasis_Number__c</fullName>
    <label>Chasis Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>