force-app/main/default/objects/RTR_Vehicle_Master__c/fields/RTR_Date__c.field-meta.xml
<CustomField>
    <fullName>RTR_Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>