force-app/main/default/objects/RTR_Vehicle_Master__c/fields/RTR_KM_Consumed__c.field-meta.xml
<CustomField>
    <fullName>RTR_KM_Consumed__c</fullName>
    <label>KM Consumed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>