force-app/main/default/objects/RTR_Vehicle_Master__c/fields/RTR_Make__c.field-meta.xml
<CustomField>
    <fullName>RTR_Make__c</fullName>
    <label>Make</label>
    <length>30</length>
    <type>Text</type>
</CustomField>