force-app/main/default/objects/RTR_Vehicle_Master__c/fields/RTR_Purpose__c.field-meta.xml
<CustomField>
    <fullName>RTR_Purpose__c</fullName>
    <label>Purpose</label>
    <length>255</length>
    <type>Text</type>
</CustomField>