force-app/main/default/objects/RTR_Vehicle_Master__c/fields/RTR_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>RTR_Registration_Number__c</fullName>
    <label>Registration  Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>