force-app/main/default/objects/RTR_Vehicle_Master__c/fields/RTR_Seating_Capacity__c.field-meta.xml
<CustomField>
    <fullName>RTR_Seating_Capacity__c</fullName>
    <label>Seating Capacity</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>