force-app/main/default/objects/RTR_Vehicle_Master__c/fields/RTR_Total_Expenditure__c.field-meta.xml
<CustomField>
    <fullName>RTR_Total_Expenditure__c</fullName>
    <inlineHelpText>Total amount spent on the vehicle for all the expences.</inlineHelpText>
    <label>Total Expenditure</label>
    <summarizedField>RTR_Vehicle_Expenses__c.RTR_Amount__c</summarizedField>
    <summaryForeignKey>RTR_Vehicle_Expenses__c.RTR_Vehicle_Name__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>