force-app/main/default/objects/RTR_Vehicle_Master__c/fields/RTR_Type_of_Fuel__c.field-meta.xml
<CustomField>
    <fullName>RTR_Type_of_Fuel__c</fullName>
    <label>Type of Fuel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Petrol</fullName>
            </value>
            <value>
                <fullName>Diesel</fullName>
            </value>
            <value>
                <fullName>Electric</fullName>
            </value>
            <value>
                <fullName>CNG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>