force-app/main/default/objects/RTR_Vehicle_Master__c/fields/RTR_Type_of_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>RTR_Type_of_Vehicle__c</fullName>
    <label>Type of Vehicle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bus</fullName>
            </value>
            <value>
                <fullName>Van</fullName>
            </value>
            <value>
                <fullName>Car</fullName>
            </value>
            <value>
                <fullName>Jeep</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>