force-app/main/default/objects/RTR_Vehicle_Master__c/fields/RTR_Vendor__c.field-meta.xml
<CustomField>
    <fullName>RTR_Vendor__c</fullName>
    <label>Vendor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>