force-app/main/default/objects/RTR_Vehicle_Master__c/fields/RTR_Year_of_Manifacturing__c.field-meta.xml
<CustomField>
    <fullName>RTR_Year_of_Manifacturing__c</fullName>
    <label>Year of Manufacturing</label>
    <type>Date</type>
</CustomField>