force-app/main/default/objects/RTR_Vehicle_Master__c/recordTypes/RTR_Hired_Vehicle.recordType-meta.xml
<RecordType>
    <fullName>RTR_Hired_Vehicle</fullName>
    <active>true</active>
    <label>Hired Vehicle</label>
</RecordType>