force-app/main/default/objects/RTR_Vehicle_Master__c/recordTypes/RTR_REVA_Owned.recordType-meta.xml
<RecordType>
    <fullName>RTR_REVA_Owned</fullName>
    <active>true</active>
    <label>REVA Owned</label>
</RecordType>