force-app/main/default/objects/RTR_Vehicle_Master__c/listViews/Hired_Vehicles.listView-meta.xml
<ListView>
    <fullName>Hired_Vehicles</fullName>
    <columns>NAME</columns>
    <columns>RTR_Type_of_Vehicle__c</columns>
    <columns>RTR_KM_Consumed__c</columns>
    <columns>RTR_Year_of_Manifacturing__c</columns>
    <columns>RTR_Amount__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>RTR_Vehicle_Master__c.RTR_Hired_Vehicle</value>
    </filters>
    <label>Hired Vehicles</label>
</ListView>