force-app/main/default/objects/RTR_Vehicle_Master__c/listViews/Reva_Owned.listView-meta.xml
<ListView>
    <fullName>Reva_Owned</fullName>
    <columns>NAME</columns>
    <columns>RTR_Registration_Number__c</columns>
    <columns>RTR_Chasis_Number__c</columns>
    <columns>RTR_Seating_Capacity__c</columns>
    <columns>RTR_Type_of_Fuel__c</columns>
    <columns>RTR_Year_of_Manifacturing__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Active__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>RTR_Vehicle_Master__c.RTR_REVA_Owned</value>
    </filters>
    <label>Reva Owned</label>
</ListView>